@@ -1,6 +1,7 @@
 linux (6.7.12-1~bpo12+1) UNRELEASED; urgency=medium
 
-  * Rebuild for bookworm-backports
+  * Rebuild for bookworm-backports:
+    - debian_linux.config_v2: Add workaround for a bug in older dacite
 
  -- Ben Hutchings <benh@debian.org>  Sun, 05 May 2024 22:57:02 +0200
 
